# Copyright 2014 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(is_android || is_ohos)

if (is_android) {
  source_set("ashmem") {
    sources = [
      "ashmem-dev.c",
      "ashmem.h",
    ]

    configs -= [ "//build/config/android:default_orderfile_instrumentation" ]
  }
} else if (is_ohos) {
  import("//build/config/ohos/config.gni")
  config("ohos_system_libs") {
    libs = [ "nweb_ohos_adapter.z" ]

    include_dirs = ohos_src_includes
    lib_dirs = ohos_libs_dir
  }

  source_set("ashmem") {
    sources = [
      "ashmem.h",
      "ohos_ashmem.cc",
    ]

    configs += [ ":ohos_system_libs" ]
  }
}
